# tracing-multi-crate

./: Cargo.toml  README.md
crate-a/: Cargo.toml
crate-a/src/: lib.rs
crate-b/: Cargo.toml
crate-b/src/: lib.rs
crate-main/: Cargo.toml
crate-main/src/: main.rs
